Enhance chatbot commands with cache management and case-insensitive column handling
- Added a `--no-cache` option to the interactive and ask commands to allow users to skip loading from cache and generate vectors from scratch.
- Implemented case-insensitive column name handling for the database, improving robustness against variations in column naming.
- Updated the `.gitignore` to include the new vector cache file.
- Removed the obsolete `test_cache_load.pkl` file.
- Refactored code for better readability and maintainability, including type hinting improvements and error handling for cache file operations.
- Adjusted tests to accommodate changes in command options and ensure proper functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ dist/*.whl
 
 # Test reports and coverage
 .coverage
-report.xml
-coverage.xml
-code-quality-report.json
+
+# Vector database
+vector_cache.pkl
+
