--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,24 @@
 name = "bert-chatbot"
 description = "A semantic chatbot that provides answers to user queries by finding the most semantically similar questions in an Excel database."
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.10,<3.11"
 dependencies = [
   "rich>=14.0.0",
   "structlog>=21.1.0",
   "typer>=0.12.0",
   "pandas>=2.0.0",
   "scikit-learn>=1.3.0",
-  "numpy>=1.24.0",
+  "numpy<2.0.0",
   "openpyxl>=3.1.0",
+  "sentence-transformers>=2.3.0",
+  "transformers>=4.32.0",
+  "torch>=2.1.0,<2.3.0",
+  "spacy>=3.8.4",
+  "huggingface-hub>=0.31.1",
+  "fastapi>=0.100.0",
+  "uvicorn[standard]>=0.20.0",
+  "jinja2>=3.1.0",
+  "python-multipart>=0.0.5",
 ]
 version = "0.0.0-0"
 
@@ -26,6 +35,7 @@ dev = [
   "pytest-socket>=0.3.2",
   "pytest-timeout>=2.1.0",
   "pytest>=6.0.0",
+  "pytest-mock>=3.6.1",
   "ruff>=0.2.0",
 ]
 
