--- a/requirements.txt
+++ b/requirements.txt
@@ -95,7 +95,7 @@ typing-extensions==4.13.2
 typing-inspection==0.4.0
 tzdata==2025.2
 urllib3==2.4.0
-uvicorn==0.34.2
+uvicorn[standard]==0.29.0
 uvloop==0.21.0
 wasabi==1.1.3
 watchfiles==1.0.5
